<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/t_tulo_del_plato"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/imgComida"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:contentDescription="@string/imagen_del_plato"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgOferta"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/oferta"
            tools:srcCompat="@drawable/oferta2x1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_precio"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/_12_99"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgCarrito"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/carrito"
                app:srcCompat="@drawable/boton_carrito" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
