<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgComida"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/imagen_del_plato"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <!-- Título del plato -->
            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/t_tulo_del_plato"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <!-- Descripción breve del plato -->
            <TextView
                android:id="@+id/tv_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/breve_descripci_n_del_plato_breve_descripci_n_del_plato"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="18sp"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_precio"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/_12_99"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnCarrito"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/a_adir_al_carrito" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
